# relago-web

./: README.md  flake.nix
client/: .gitignore  default.nix  flake.nix  kolyma.nix  module.nix  result  shell.nix
client/nix/: package.nix  shell.nix  treefmt.nix
nix/: shell.nix
server/: CHANGELOG.md  README.md  default.nix  flake.nix  relagoweb.cabal  shell.nix
